y044: '季思退', '季退思'

--- a/_posts/2009-8-26-0-00700.md
+++ b/_posts/2009-8-26-0-00700.md
@@ -175,9 +175,9 @@ tag: [normal]
 
 　　钟利时大人向我们大声说：“看，这就是掌握了电的力量的成果！”他的头发在风中飞舞，那一瞬间，我们真把他当成了奥林匹斯山上掌握雷电的宙斯。接下来我们将会学习这种力量是如何产生的，以及如何正确使用它。
 
-　　另外我的英国同胞，三一学院的艾萨克·牛顿先生最近过得非常不好，总是失魂落魄的样子，作为广州城里面一个巴掌都能数的过来的英国人中的一个，我有责任去关心一下。我走到他身边，只听到他的喃喃自语“真想不到”。我追问之下，原来牛顿先生在前几天的化学课上被镇到了，季思退大人开始讲授物质的基本构造，按照中国的物质理论，物质的基础结构是一种称为“原子”的粒子，它有一个带正电的质子和中性的中子组成的原子核，而外面有带负电的电子环绕。物质元素被定义为不能被分解成更简单的物质。换句话说，一种化学元素不能转化成其他化学元素。
+　　另外我的英国同胞，三一学院的艾萨克·牛顿先生最近过得非常不好，总是失魂落魄的样子，作为广州城里面一个巴掌都能数的过来的英国人中的一个，我有责任去关心一下。我走到他身边，只听到他的喃喃自语“真想不到”。我追问之下，原来牛顿先生在前几天的化学课上被镇到了，[季思退][y044]大人开始讲授物质的基本构造，按照中国的物质理论，物质的基础结构是一种称为“原子”的粒子，它有一个带正电的质子和中性的中子组成的原子核，而外面有带负电的电子环绕。物质元素被定义为不能被分解成更简单的物质。换句话说，一种化学元素不能转化成其他化学元素。
 
-　　银是一种物质，黄金又是另一种物质。它们之所以不同，是因为其质子数的不同。而将其他物质转换成黄金。需要将它每一个原子进行转换，增加或者减少它们原子核的质子数，季思退大人称所需的能量（这是一个由中国人发明的物理量，用于计算某一个物理系统对其他的物理系统做功的能力）超过上帝创世的能量，因此，“别妄想躲在屋子里用水银或者其它什么的坛坛罐罐就能炼出黄金来！”季思退大人非常严厉的说。
+　　银是一种物质，黄金又是另一种物质。它们之所以不同，是因为其质子数的不同。而将其他物质转换成黄金。需要将它每一个原子进行转换，增加或者减少它们原子核的质子数，[季思退][y044]大人称所需的能量（这是一个由中国人发明的物理量，用于计算某一个物理系统对其他的物理系统做功的能力）超过上帝创世的能量，因此，“别妄想躲在屋子里用水银或者其它什么的坛坛罐罐就能炼出黄金来！”[季思退][y044]大人非常严厉的说。
 
 　　可是牛顿先生一直信奉上帝和炼金术的存在，但现在可好了，我们出现了超过上帝创世的能量，又否定了炼金术，因此我能感受到他所受的打击。这比东方大人的自由搏击比赛上的“莱布尼兹重拳”还要疼痛万倍，我也不知道怎么办才好。
 
@@ -279,7 +279,7 @@ tag: [normal]
 
 　　但我可以讲讲我对中国人创造财富的理解，一言以蔽之，中国人创造财富的方法是“技术立国”，大宋元老院的所有执委大多数是工程师出身，少数懂会计和法律。大宋第三帝国（之前有过定都汴梁的大宋第一帝国和定都杭州的大宋第二帝国）的国父们有鉴于第一帝国和第二帝国最后被野蛮人所征服的悲惨命运，得出了结论，掌握超越这个时代所有国家的科学水平是生存下去的必要条件之一。只要掌握了超越这个时代所有国家的科学和工程水平，无论是保卫领土或者是创造财富都是轻而易举的事，因此在第三帝国回归大陆之前的几百年里面，这些遗民和后裔们把澳洲变成了一座大学堂，据说在圣地提倡两样东西：“斯巴达式的清苦生活和雅典的学术氛围”。
 
-　　就拿现在行销欧洲大陆的饮料可乐来说，它就涉及到大量的工程技术，各位在欧洲大陆夏天里面很难喝到冰凉的可乐对不对？而在这里是非常廉价的东西，季思退大人发现了单质氟和单质氯，以及有机物甲烷，然后在这个基础上又合成了二氯二氟甲烷（以上物质的分子式和结构图以及实验室制法尚属保密，恕我无法提供），它取代了过往易燃或有毒的氨和二氧化硫成为新一代的冷却剂——它气化时吸收大量内能，令附近环境变冷。在二氯二氟甲烷的基础上，[展无涯][y004]大人进一步制造了利用这种冷却剂的机器——压缩机，这是在常温下制冷技术变得非常简易。
+　　就拿现在行销欧洲大陆的饮料可乐来说，它就涉及到大量的工程技术，各位在欧洲大陆夏天里面很难喝到冰凉的可乐对不对？而在这里是非常廉价的东西，[季思退][y044]大人发现了单质氟和单质氯，以及有机物甲烷，然后在这个基础上又合成了二氯二氟甲烷（以上物质的分子式和结构图以及实验室制法尚属保密，恕我无法提供），它取代了过往易燃或有毒的氨和二氧化硫成为新一代的冷却剂——它气化时吸收大量内能，令附近环境变冷。在二氯二氟甲烷的基础上，[展无涯][y004]大人进一步制造了利用这种冷却剂的机器——压缩机，这是在常温下制冷技术变得非常简易。
 
 　　另外，各位在欧洲最常见到的是玻璃瓶装的可乐，另外一种可乐的包装是使用一种叫铝的合金制成的金属罐，之前是使用铁作为罐体，铝合金使得可乐较为容易携带和储存，另外铝在自然中的储存量也非常丰富，某些场合可以作为钢的代用品。在起初没有解决大规模生产铝的课题之前，铝合金罐体包装的可乐只为500个元老家族所享用，普通市民只能购买到玻璃瓶装的可乐，但现在“霍特牌”铝合金罐装可乐已经至少行销中国南部了，价格也和玻璃瓶装差不多。
 
@@ -341,3 +341,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
