--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -124,7 +124,7 @@ tag: [normal]
 
 　　a)科技——钟利时（smallfairyv2），现任科技人民委员，历任能源组成员长，未来任帝国科学院院士
 
-　　b)化工——季退思（思考的人），现任化工部部长，历任工业组成员、化工组组长
+　　b)化工——[季退思][y044]（思考的人），现任化工部部长，历任工业组成员、化工组组长
 
 　　c)冶金——季无声（寂静无声），现任冶金工业人民委员、临高钢铁公司总经理、总工程师，历任冶金组组长、冶金部部长
 
@@ -484,7 +484,7 @@ tag: [normal]
 17、伍子衿（避孕光环），现任科技部成员、元老院办公厅足球队主力左边后卫
 
 
-18、季退思（思考的人），现任化工部部长，历任工业组成员、化工组组长
+18、[季退思][y044]（思考的人），现任化工部部长，历任工业组成员、化工组组长
 
 
 19、季无声（寂静无声），现任冶金工业人民委员、临高钢铁公司总经理、总工程师，历任冶金组组长、冶金部部长
@@ -3453,3 +3453,4 @@ ID不明的穿越者（如有知情者请补充）
 [y009]: /characters/y009 "吴南海"
 [y010]: /characters/y010 "常凯申"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
