--- a/_posts/2009-9-16-1-01600.md
+++ b/_posts/2009-9-16-1-01600.md
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　慢慢的机械上的讨论平息下来了，工业组的纸张也用了不少，看起来他们都有些胸有成竹的意思了。[文德嗣][y002]看到[王工][y003]兴致勃勃的在那里奋笔疾书，不由得担心这张采购单是不是会过长。
 
-　　“我是季思退。”一个一脸络腮胡的男人站了起来，虽然有满脸的胡子，实际上脸型却是娃娃脸，“我代表化工组表示强烈的抗议。”他说到“化工组”这三个字的时候特意加重了语气，“化工行业可是一个十分要紧的工业门类，怎么可以不分青红皂白都给归到工业组里呢？他们都是搞机械的，和我们根本不搭界么！”
+　　“我是[季思退][y044]。”一个一脸络腮胡的男人站了起来，虽然有满脸的胡子，实际上脸型却是娃娃脸，“我代表化工组表示强烈的抗议。”他说到“化工组”这三个字的时候特意加重了语气，“化工行业可是一个十分要紧的工业门类，怎么可以不分青红皂白都给归到工业组里呢？他们都是搞机械的，和我们根本不搭界么！”
 
 　　“关于分组问题，以后再讨论，先说你对化学工业的看法吧。”
 
@@ -98,7 +98,7 @@ tag: [normal]
 
 　　“这些东西，嗯，不能自产么？我们的机械工业还是比较完整的。”
 
-　　“材料问题。”季思退说，“除非能很快出不锈钢、聚乙烯这类的材料，否则我看十年之内自产化工设备是比较难的。”
+　　“材料问题。”[季思退][y044]说，“除非能很快出不锈钢、聚乙烯这类的材料，否则我看十年之内自产化工设备是比较难的。”
 
 　　“用玻璃和陶瓷呢？八路军军工做硫酸就是用水缸做反应塔的。而且很多大跃进的土法化工设备也都是用这些东西。”[罗铎][y011]又出来发言了。
 
@@ -106,7 +106,7 @@ tag: [normal]
 
 　　“我想请问，有了这些设备之后，我们能建立起有机化学工业吗？”
 
-　　“这个，恐怕很难。”季思退想，你们还真是得陇望蜀啊，这有机化工是这么好搞得么。
+　　“这个，恐怕很难。”[季思退][y044]想，你们还真是得陇望蜀啊，这有机化工是这么好搞得么。
 
 　　“那就出不了尼龙和人造橡胶了。”有人在哀叹。
 
@@ -124,7 +124,7 @@ tag: [normal]
 
 　　[萧子山][y001]好不容易才把大家的安定下来。
 
-　　“我想你想有有机化工是为了要塑料吧，”季思退面向那位提出建设有机化工的人士，对方点了点头，“塑料虽然是我们最常见的日用生活品，但是它牵涉到的有有机化工很复杂，我们不大可能造出来——这不仅仅是原料的问题。不过我们可以制造赛璐珞和电木。”
+　　“我想你想有有机化工是为了要塑料吧，”[季思退][y044]面向那位提出建设有机化工的人士，对方点了点头，“塑料虽然是我们最常见的日用生活品，但是它牵涉到的有有机化工很复杂，我们不大可能造出来——这不仅仅是原料的问题。不过我们可以制造赛璐珞和电木。”
 
 　　“电木很有用。”
 
@@ -136,3 +136,4 @@ tag: [normal]
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
