--- a/_posts/2010-10-24-3-18900.md
+++ b/_posts/2010-10-24-3-18900.md
@@ -64,7 +64,7 @@ tag: [normal]
 
 　　传统的几大穿越神器里，玻璃制品——包括镜子、玻璃器皿和平板玻璃已经算是步入正规了，每个月都能有一定的销量。但是除了镜子之外，玻璃器皿和平板玻璃的销量都很有限。显然来临高的小商人们对这些奢侈品也不会有任何兴趣。
 
-　　火柴，就技术来说并不复杂，东沙岛的鸟粪石大量到货之后季思退已经在组织人制造红磷——倒不是为了做火柴，而是为了军队用的发烟弹、化工生产上磷酸和冶金部准备用来试制磷青铜，后者可以作为制造发条和弹簧的材料，是工能委重点抓的新材料。
+　　火柴，就技术来说并不复杂，东沙岛的鸟粪石大量到货之后[季思退][y044]已经在组织人制造红磷——倒不是为了做火柴，而是为了军队用的发烟弹、化工生产上磷酸和冶金部准备用来试制磷青铜，后者可以作为制造发条和弹簧的材料，是工能委重点抓的新材料。
 
 　　相比之下，他的火柴能不能排上号就很难说了。莫笑安自己也几次下乡搞搞调研什么的，看到本地土著取火的时候用火镰火石，还有得干脆就是炉膛里常年留火种，用起来也不算困难。自己这火柴到底有多少市场很是问题。
 
@@ -153,3 +153,4 @@ tag: [normal]
 　　“变速箱里的这批齿轮是真正的‘临高产’，质量水得很。”黄天宇说，“我得一直在这里盯着看情况，好再改进。”
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y044]: /characters/y044 "季思退"
