--- a/_posts/2010-11-1-3-19700.md
+++ b/_posts/2010-11-1-3-19700.md
@@ -110,7 +110,7 @@ tag: [normal]
 
 　　“亚洲哪里有欧洲玻璃匠。”莫笑安说，“来亚洲这里的欧洲人基本都是人渣层面的。”
 
-　　萧白朗没搭话，注意着整个车间里的运转状况，看看是不是井井有条。最近天气炎热，加之季思退要去搞煤化厂的试生产长期不在厂，玻璃厂里的劳动纪律未免有些松懈。萧白朗一到厂里就整饬劳动纪律。
+　　萧白朗没搭话，注意着整个车间里的运转状况，看看是不是井井有条。最近天气炎热，加之[季思退][y044]要去搞煤化厂的试生产长期不在厂，玻璃厂里的劳动纪律未免有些松懈。萧白朗一到厂里就整饬劳动纪律。
 
 　　萧白朗可不搞什么政治思想工作，直接把几个磨洋工分子抓进了劳改队——后来再邬德的干涉下才被放了出来。不过这样一来厂里的生产效率提高了不少。现在他的眼睛一扫，整个车间就鸦雀无声。
 
@@ -146,3 +146,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
