--- a/_posts/2010-2-5-2-11100.md
+++ b/_posts/2010-2-5-2-11100.md
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　硝酸如何做呢？穿越爱好者们几乎人人都看过神秘岛，知道硝酸是可以用硫酸做出来的，要有硝酸，就得有硫酸。
 
-　　季思退想了想，现代的工业化硫酸生产，大体有三种不同的来源，一是煤焦化工业中的副产品，二是硫磺加硝石制取，三是硫铁矿制取。三种方法各有优劣，也有各自的土法工艺流程，但是对穿越者来说目前阶段都没得玩——没原料。幸而广州已经采购来了皂矾，虽然这种工艺产量很小，好在工艺简单之极，用他们手头的实验室设备就能制取。
+　　[季思退][y044]想了想，现代的工业化硫酸生产，大体有三种不同的来源，一是煤焦化工业中的副产品，二是硫磺加硝石制取，三是硫铁矿制取。三种方法各有优劣，也有各自的土法工艺流程，但是对穿越者来说目前阶段都没得玩——没原料。幸而广州已经采购来了皂矾，虽然这种工艺产量很小，好在工艺简单之极，用他们手头的实验室设备就能制取。
 
 　　用皂矾提炼绿矾油这算是最传统最简单的硫酸制造法了。绿矾油古人也有小规模的使用，多半是在金属加工领域，明末受益于西方传教士的科技传入，已经有人制造出了硝酸和王水，但是制造的人显然没意识到这些东西有什么具体作用，如果再假以时日，说不定会开创个中国化学的新纪元，不过急于要“建立大一统国家”的奴隶主政权很快就终结了这个可能性。
 
@@ -36,7 +36,7 @@ tag: [normal]
 
 　　先搞来几个陶缸罐和一次生产所需要的酸碱，外带15公斤棉花。烧碱靠得是存货，得找计委批，好在炸药属于军国大事，计委很痛快就批准了。
 
-　　因为烧碱和硝酸都有腐蚀性，李迪穿上了向季思退借来的化工用的手套和围身。
+　　因为烧碱和硝酸都有腐蚀性，李迪穿上了向[季思退][y044]借来的化工用的手套和围身。
 
 　　火棉需要非常纯净的脱脂棉，一般炸药厂都是购买现成的制品，穿越者就只能靠自己手工制作了。
 
@@ -91,3 +91,4 @@ tag: [normal]
 　　“这样没法用，要加工成粉再压结实。”白羽摇摇头，“先储存着吧，以后有了设备再上批量。我们还是请化工部门尽快出雷汞吧。那些步枪没雷汞不好办。”
 
 　　【注：用李迪的方法是无法做出能合格硝化棉的。如果在实验室环境下，有各种分析纯的药剂，那么做出赛璐珞棉还不成问题。但是正式的硝化棉生产要复杂的多，除了含氮量难以控制之外，去除棉中的酸的工艺也非简单的用水洗就行。硝化棉在早期因为游离酸去除不彻底，屡次发生事故，完全被军队所摒弃。】
+[y044]: /characters/y044 "季思退"
