--- a/_posts/2010-2-6-2-11200.md
+++ b/_posts/2010-2-6-2-11200.md
@@ -20,23 +20,23 @@ tag: [normal]
 
 　　一群人坐在挂骷髅头的铁丝网中间，讨论着到炸药的走向问题。
 
-　　“你们知道我们要干什么？”季思退望着眼前的这批人。
+　　“你们知道我们要干什么？”[季思退][y044]望着眼前的这批人。
 
 　　“造炸药啊，俺们等这天等都好几个月了。”
 
-　　“大家要有送命和残废的思想准备！”季思退恶狠狠的说，“现在不是捣弄黑火药加点面糊的把戏了。”
+　　“大家要有送命和残废的思想准备！”[季思退][y044]恶狠狠的说，“现在不是捣弄黑火药加点面糊的把戏了。”
 
-　　“你这个乌鸦嘴！”季思退被人狠砸了一堆泥巴土块，灰溜溜的溜到了一边。
+　　“你这个乌鸦嘴！”[季思退][y044]被人狠砸了一堆泥巴土块，灰溜溜的溜到了一边。
 
 　　除了化工组的人马，机械组的人，还有惨遭硝化棉失败的李迪也参加了这次炸药会议——他对自己的硝化棉失败心有不甘。
 
 　　“我就闹不明白，为什么硝化棉就是搞不成呢！”他懊恼万分，原以为这是手到擒来的事情。
 
-　　“化学是很精细的活，哪那么简单。”季思退说，“你的工艺是有问题的，而且还缺一些最基本的设备。”
+　　“化学是很精细的活，哪那么简单。”[季思退][y044]说，“你的工艺是有问题的，而且还缺一些最基本的设备。”
 
 　　“如果我们把设备凑齐的话，硝化棉是小意思。”叶雨茗说。他是个小公务员，但学得是化学，对矿山和爆破挺有研究。
 
-　　“嗯，能造出大一点的离心机的话。”季思退想这事情谁都知道，问题是除了实验室有台小离心机之外哪来这个东西。
+　　“嗯，能造出大一点的离心机的话。”[季思退][y044]想这事情谁都知道，问题是除了实验室有台小离心机之外哪来这个东西。
 
 　　没有离心机，硝化棉就很难彻底清除棉纤中的游离酸。在实际使用中硝化棉会变得极不稳定，奥地利军队在19世纪就很吃了这方面的苦头。
 
@@ -80,11 +80,11 @@ tag: [normal]
 
 　　徐营捷说：“我认为化工发展方向按高到低分别是：1、硝化棉，枪炮威力倍增器，其他火药做不到。2、合成氨，这个只要我们的合成氨工厂完工就能搞定。3、苦味酸，耐冲击的，可以用硝化棉发射的强力炸药。**是个废柴，只能装个炸药包、手榴弹什么的，威力也并不明显优于苦味酸，稳定性太差了。”
 
-　　“合成氨没什么问题的，工厂一落成就可以，苦味酸太难了。”季思退断然否定，“苯酚制取的工艺，过10年也许可以，光13个大气压的条件就没戏。”
+　　“合成氨没什么问题的，工厂一落成就可以，苦味酸太难了。”[季思退][y044]断然否定，“苯酚制取的工艺，过10年也许可以，光13个大气压的条件就没戏。”
 
 　　“用煤焦油可以提炼苯酚的，不一定非要用苯啊。苯酚本来就是煤焦化的产品。”
 
-　　“这个工艺效率不怎么样。一定要造苦味酸的话，我们的煤焦化工厂一投产就能出苯酚。不嫌产量低的话到时候就行，问题是军事组现在等不了。”季思退无奈的摊开手。
+　　“这个工艺效率不怎么样。一定要造苦味酸的话，我们的煤焦化工厂一投产就能出苯酚。不嫌产量低的话到时候就行，问题是军事组现在等不了。”[季思退][y044]无奈的摊开手。
 
 　　“那就只有黑火药了。”徐营捷说，“如果有人不怕死的话也可以试试看TNT。”
 
@@ -120,3 +120,4 @@ tag: [normal]
 
 　　徐营捷小心翼翼的把湿雷汞收集起来，用棉布包好，再用一个手动的压缩器榨去水分，使得含水率低于5％。正常情况下雷汞要在专用的烘干室内进行暖风干燥10—15小时才算完成，现在没这个条件，只能自然晾干了。
 [y003]: /characters/y003 "王洛宾"
+[y044]: /characters/y044 "季思退"
