--- a/_posts/2010-3-15-2-14900.md
+++ b/_posts/2010-3-15-2-14900.md
@@ -48,9 +48,9 @@ tag: [normal]
 
 　　“我对这个可不懂了。”邬德知道[文主席][y002]对货币制度一定有他自己的研究，他对此所知不多，还是少说为妙，“在这个问题上我没有个人看法，服从执委会的安排。”
 
-　　[文德嗣][y002]和邬德分手之后，决定去一次玻璃厂看看玻璃试制的近况。这家玻璃厂是在年前完成基建工程的。郭逸从广州已经发来了多次电报，催促穿越工业能够尽快供货——老是卖丰城轮上的库存不是办法，而且他们对诸彩老和刘香开出了的和谈筹码也是玻璃。闹半天造不出来不但是一个笑话，还很影响声誉。除了贸易，化工部门未来对玻璃的需求也很大——毕竟这是唯一一种他们有把握制造，能耐受多数化学品腐蚀的材料。化工部门还指望着用玻璃制造反应釜、容器和各种管道。从十二月二十三开始，从化工、机械和冶金各个专业组抽调出专业人员，由季思退任组长的玻璃攻关小组就开始试制了。
+　　[文德嗣][y002]和邬德分手之后，决定去一次玻璃厂看看玻璃试制的近况。这家玻璃厂是在年前完成基建工程的。郭逸从广州已经发来了多次电报，催促穿越工业能够尽快供货——老是卖丰城轮上的库存不是办法，而且他们对诸彩老和刘香开出了的和谈筹码也是玻璃。闹半天造不出来不但是一个笑话，还很影响声誉。除了贸易，化工部门未来对玻璃的需求也很大——毕竟这是唯一一种他们有把握制造，能耐受多数化学品腐蚀的材料。化工部门还指望着用玻璃制造反应釜、容器和各种管道。从十二月二十三开始，从化工、机械和冶金各个专业组抽调出专业人员，由[季思退][y044]任组长的玻璃攻关小组就开始试制了。
 
-　　制造玻璃的第一个要求是有耐高温的坩锅。攻关小组用的坩锅是从21世纪带来的——虽然季思退知道用苦卤中的氯化镁可以造出耐高温的坩锅，中国古代的冶炼匠人也能制造，他记得山西阳城县有座明末修建的古城堡砥汨堡，它的围墙就是用附近的冶铁重镇润城镇的丢弃的废坩锅做建筑材料的。但是制造坩锅毕竟也是专门的技术，技术掌握不好的话，在使用中很容易爆炸。当年吴运铎就曾经遇到过自制坩锅屡次爆炸的问题。直到最后找到了一名专门的匠人学到的技术才算过关。穿越众里显然不可能有人会造坩锅，而且临高也不是什么冶炼重镇，找到当地匠人的可能性微乎其微。所以特意带了一批大大小小不同的坩锅来应急用。
+　　制造玻璃的第一个要求是有耐高温的坩锅。攻关小组用的坩锅是从21世纪带来的——虽然[季思退][y044]知道用苦卤中的氯化镁可以造出耐高温的坩锅，中国古代的冶炼匠人也能制造，他记得山西阳城县有座明末修建的古城堡砥汨堡，它的围墙就是用附近的冶铁重镇润城镇的丢弃的废坩锅做建筑材料的。但是制造坩锅毕竟也是专门的技术，技术掌握不好的话，在使用中很容易爆炸。当年吴运铎就曾经遇到过自制坩锅屡次爆炸的问题。直到最后找到了一名专门的匠人学到的技术才算过关。穿越众里显然不可能有人会造坩锅，而且临高也不是什么冶炼重镇，找到当地匠人的可能性微乎其微。所以特意带了一批大大小小不同的坩锅来应急用。
 
 　　造玻璃的坩锅是闭口的，之所以要闭口，是防止在冶炼过程中玻璃液被煤烟污染。至于原料则是石英砂、生石灰和纯碱。
 
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　第二个办法则是用土法上马吕布兰制碱法，他们手里有从广州买来的芒硝，经过加热脱水之后，将石灰石、木炭按比例混合后放入坩锅用高温烧制，炼制出来的东西用磨盘磨细，放在水中搅拌溶解之后，再滤出碱卤水，蒸发干净就能得到纯碱。
 
-　　季思退考虑到第二种办法过于费事，决定还是采取第一种海草灰的做法。这种做法欧洲用了几百年，他们来用也不会有什么大问题。
+　　[季思退][y044]考虑到第二种办法过于费事，决定还是采取第一种海草灰的做法。这种做法欧洲用了几百年，他们来用也不会有什么大问题。
 
 　　于是海军的化学、机械爱好者李迪带着人到海边去大量的捞海草，晒干之后就地烧成草木灰，再用木桶运回来。
 
@@ -72,7 +72,7 @@ tag: [normal]
 
 　　当然，在这个各行各业什么人士都有的团体中，任何设计都会得到无数的改进意见。这座玻璃炉在构造上，内膛砖和炉外砖之间就加砌了一层硅藻土保温砖，这使得炉壁厚度大为增加，但是起到的保温效果能大量的节约燃料。
 
-　　考虑到炼制玻璃的温度至少在1200℃之上，虽然他们从技术文献上得知道，这种形制的玻璃炉并不需要预热室之类的东西，但是季思退等人从保证一定可用的角度出发，还是在圆形炉的顶部中央的最高室外加了一个陶瓷管道，将排放的热空气导入预热室，供应鼓风机进行热鼓风之用。
+　　考虑到炼制玻璃的温度至少在1200℃之上，虽然他们从技术文献上得知道，这种形制的玻璃炉并不需要预热室之类的东西，但是[季思退][y044]等人从保证一定可用的角度出发，还是在圆形炉的顶部中央的最高室外加了一个陶瓷管道，将排放的热空气导入预热室，供应鼓风机进行热鼓风之用。
 
 　　完成了这个改进版本的玻璃炉之后，化工组和机械组联合开始烧制玻璃试验。第一次烧制过程长达10个小时，最后坩锅里的固体原材料终于成了黏糊糊的玻璃浆。大家马上开始试吹，结果吹出来的东西奇形怪状，什么模样的都有。
 
@@ -84,7 +84,8 @@ tag: [normal]
 
 　　“就知道有这么回事情嘛。”李迪也的确不知道他们上哪里去找这个二氧化锰。
 
-　　“好吧，其实不需要什么二氧化锰，”季思退说，“它起得就是氧化剂的作用，不一定得二氧化锰，硝酸钾也是一种氧化剂，加这个进行了”
+　　“好吧，其实不需要什么二氧化锰，”[季思退][y044]说，“它起得就是氧化剂的作用，不一定得二氧化锰，硝酸钾也是一种氧化剂，加这个进行了”
 
 　　所谓硝酸钾也就是硝石，这东西他们还有不少。再尝试了几次之后，玻璃试验组终于在除夕前一天做出了无色的玻璃。这一成让工业部门的许多人欢呼：穿越神器——玻璃，诞生了！
 [y002]: /characters/y002 "文德嗣"
+[y044]: /characters/y044 "季思退"
