--- a/_posts/2010-3-16-2-15000.md
+++ b/_posts/2010-3-16-2-15000.md
@@ -44,9 +44,9 @@ tag: [normal]
 
 　　[文德嗣][y002]走进热气腾腾的玻璃厂工棚的时候，却发现多数人都没精打采蹲在工棚外扇扇子，玻璃炉还在散发着逼人的热气，工棚里的气温足够有三十七八度那么热。一会就大汗淋漓了。地当间的一个大筐里装满了砸碎的玻璃片，地上、操作台上，到处都是奇形怪状的玻璃器，有的勉强可以看出来这是个杯子或者瓶子。
 
-　　季思退没精打采的告诉他，玻璃器的试制完全不成功——没有人有本事吹出一个合适的形状来。这些业余玻璃匠们从一大早开始就勤学苦练他们的吹玻璃技巧。翻遍了所有的资料都没找到教人如何吹玻璃的。唯一的线索是一部关于手工玻璃制作的纪录片，电视上的工人吹起来要什么有什么，他们则完全不得要领。不要说玻璃杯、玻璃碗、瓶子之类的器具，连类似器具的东西都没做出几个来。年初一一大早到现在，吹坏的东西已经装了几筐子了。
+　　[季思退][y044]没精打采的告诉他，玻璃器的试制完全不成功——没有人有本事吹出一个合适的形状来。这些业余玻璃匠们从一大早开始就勤学苦练他们的吹玻璃技巧。翻遍了所有的资料都没找到教人如何吹玻璃的。唯一的线索是一部关于手工玻璃制作的纪录片，电视上的工人吹起来要什么有什么，他们则完全不得要领。不要说玻璃杯、玻璃碗、瓶子之类的器具，连类似器具的东西都没做出几个来。年初一一大早到现在，吹坏的东西已经装了几筐子了。
 
-　　“[文总][y002]，这事不好办。”季思退的脑门子上都是汗，这里炉火熊熊，加上怎么也出不了合格的玻璃器，把个化工组的组长急得直上火。
+　　“[文总][y002]，这事不好办。”[季思退][y044]的脑门子上都是汗，这里炉火熊熊，加上怎么也出不了合格的玻璃器，把个化工组的组长急得直上火。
 
 　　“不要着急么，计委的玻璃器库存还有很多，能顶一个阶段。”[文德嗣][y002]比他还着急，还是故作镇定的安慰他。
 
@@ -76,13 +76,13 @@ tag: [normal]
 
 　　“没错。[文总][y002]您也想起来了？”李梅满面笑容，“既然做不了吹制器，那就上模压器好了，其实要说到玻璃杯，模压制造的可比吹制的多得多了。”
 
-　　“好，我们这就试试看！”季思退想这个思路倒是开拓了一个新局面。模压要使用模具，设计制造模具对机械部门来说是小菜一碟，更何况是这种简单的小东西。
+　　“好，我们这就试试看！”[季思退][y044]想这个思路倒是开拓了一个新局面。模压要使用模具，设计制造模具对机械部门来说是小菜一碟，更何况是这种简单的小东西。
 
 　　“等下，我们要先把规格定下来。”[文德嗣][y002]说，“既然用到模具的话，就要定下外观和规格、尺寸，这样才能方便以后的标准化制造，否则会造成浪费。”
 
 　　大家面面相觑，玻璃杯、玻璃瓶这些东西平时见多了，谁知道它的规格尺寸是什么模样的？倒还是萧白朗想了起来：到计委的仓库里把各种玻璃器具都拿一份出来，实地测绘不就知道了？
 
-　　当下[文德嗣][y002]赶紧给[马千瞩][y005]打电话，要求暂借一批玻璃器。这边玻璃器攻关小组兵分两路，一路人马由季无声、萧白朗等冶金机械方面的人员组成，领到样品后马上着手测绘、开模。另一路由季思退率领的化工人员继续冶炼玻璃料，为其后的大规模生产备足原料。当下分工已定，各自行动起来。
+　　当下[文德嗣][y002]赶紧给[马千瞩][y005]打电话，要求暂借一批玻璃器。这边玻璃器攻关小组兵分两路，一路人马由季无声、萧白朗等冶金机械方面的人员组成，领到样品后马上着手测绘、开模。另一路由[季思退][y044]率领的化工人员继续冶炼玻璃料，为其后的大规模生产备足原料。当下分工已定，各自行动起来。
 
 　　[文德嗣][y002]自己也干过模具，反正过年放假也没什么事情，就随着机械这部分去了，顺便为制造模具提供一些专业意见。
 
@@ -100,7 +100,7 @@ tag: [normal]
 
 　　1629年的年初一就这样过去了。
 
-　　第二天，季思退把连夜搞好的几副生铁模具送到了玻璃厂。由于昨天通过吹制玻璃已经大概知道了玻璃液的物理特性，大家经过讨论，又做了几次试制之后，确定了工艺流程：首先在模具内部涂抹上一层用桐油调和的木炭粉末，防止玻璃液与模具内部产生黏合。然后季思退用吹管蘸一团粘稠的玻璃浆出来后，一边向吹管里面吹气，一边将取出的玻璃料在一块干净的铁制滚板上滚圆，然后开始举起吹管和玻璃泡向上方吹气，这样就可以避免玻璃料集中在玻璃泡的底部。当玻璃泡的体积达到一定尺寸之后，将吹管放下，用坩埚钳将玻璃泡拉长到生铁模具的长度，将玻璃泡放入生铁模具中，使玻璃泡沉到模具底部，这时旁边的人踏住木头夹板将模具合上，一边继续吹气，一边通过不断的旋转吹管来转动模具中的玻璃泡。片刻之后，用冷水将玻璃泡打下。打开铸铁模具，一个漂亮的八角形玻璃杯出现在大家的面前，所有人都如释重负般地吁了口气。
+　　第二天，[季思退][y044]把连夜搞好的几副生铁模具送到了玻璃厂。由于昨天通过吹制玻璃已经大概知道了玻璃液的物理特性，大家经过讨论，又做了几次试制之后，确定了工艺流程：首先在模具内部涂抹上一层用桐油调和的木炭粉末，防止玻璃液与模具内部产生黏合。然后[季思退][y044]用吹管蘸一团粘稠的玻璃浆出来后，一边向吹管里面吹气，一边将取出的玻璃料在一块干净的铁制滚板上滚圆，然后开始举起吹管和玻璃泡向上方吹气，这样就可以避免玻璃料集中在玻璃泡的底部。当玻璃泡的体积达到一定尺寸之后，将吹管放下，用坩埚钳将玻璃泡拉长到生铁模具的长度，将玻璃泡放入生铁模具中，使玻璃泡沉到模具底部，这时旁边的人踏住木头夹板将模具合上，一边继续吹气，一边通过不断的旋转吹管来转动模具中的玻璃泡。片刻之后，用冷水将玻璃泡打下。打开铸铁模具，一个漂亮的八角形玻璃杯出现在大家的面前，所有人都如释重负般地吁了口气。
 
 　　接着又做出来圆形玻璃杯、玻璃碗、西洋式高脚酒杯，甚至玻璃酒瓶——这是郭逸要求了很久的东西。
 
@@ -108,7 +108,8 @@ tag: [normal]
 
 　　第一批成型的器皿让整个玻璃攻关小组爱不释手。执委会接到这一好消息之后，下令把这批玻璃器中的每一种各提取一件送计委作为“重要历史文物”作永久保存。
 
-　　季思退再接再厉，干脆按照郭逸在电报中的要求，让萧白朗按照扁瓶红星二锅头的模样设计了一套模具，一口气制造了三百个酒瓶。这种小物件形状简单，材料用得又少，正好给大家上手练习用。
+　　[季思退][y044]再接再厉，干脆按照郭逸在电报中的要求，让萧白朗按照扁瓶红星二锅头的模样设计了一套模具，一口气制造了三百个酒瓶。这种小物件形状简单，材料用得又少，正好给大家上手练习用。
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
