--- a/_posts/2010-4-19-3-00100.md
+++ b/_posts/2010-4-19-3-00100.md
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　[展无涯][y004]连连点头：“我赞同尽快拓展电力设施，以现在的电力供应水平，机械部门的开工率太低了。”机械厂里的许多机床到现在还没有开封——海南湿度大，开了封之后保养工作繁重，穿越者也缺少足够的油脂。
 
-　　“化工部门也是这个意见！”季思退说，“如果不是电力匮乏，我们的土法电解槽早就可以开工了，烧碱、漂白粉什么的，马上就能量产——这些东西太有用了。”
+　　“化工部门也是这个意见！”[季思退][y044]说，“如果不是电力匮乏，我们的土法电解槽早就可以开工了，烧碱、漂白粉什么的，马上就能量产——这些东西太有用了。”
 
 　　“输配电的问题能解决么？”[马千瞩][y005]问。
 
@@ -83,3 +83,4 @@ tag: [normal]
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
 [y010]: /characters/y010 "常凯申"
+[y044]: /characters/y044 "季思退"
