--- a/_posts/2010-4-22-3-00400.md
+++ b/_posts/2010-4-22-3-00400.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　“肥皂的工艺和技术比较简单，能快速出货的产品。”
 
-　　“油脂问题怎么办？”季思退想你说的容易，我到现在想出甘油都觉得很困难——[吴南海][y009]不把油脂用到地沟油的水平就坚决不给他。到目前为止全部的工业油脂也就是当初船厂整修伏波号时候用那些猪油。
+　　“油脂问题怎么办？”[季思退][y044]想你说的容易，我到现在想出甘油都觉得很困难——[吴南海][y009]不把油脂用到地沟油的水平就坚决不给他。到目前为止全部的工业油脂也就是当初船厂整修伏波号时候用那些猪油。
 
 　　[吴南海][y009]无奈的举起手：“别看我，农委会没这么快解决问题的。”
 
@@ -42,7 +42,7 @@ tag: [normal]
 
 　　火柴，另一项穿越神器。火柴的技术很简单，只要找到磷就行，有松香和锑更好，这些东西都不难找。相比之下，[文德嗣][y002]对火柴的销路还比较有信心——比起火镰火石，火柴在便捷性上的优势太大了。
 
-　　“磷的加工倒好说，但是本地没有磷矿。”季思退说。
+　　“磷的加工倒好说，但是本地没有磷矿。”[季思退][y044]说。
 
 　　“这里离开东沙群岛不远，派船去挖鸟粪石吧。鸟粪石不仅可以提炼磷，还能用来做肥料。”
 
@@ -124,3 +124,4 @@ tag: [normal]
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
