--- a/_posts/2010-4-23-3-00500.md
+++ b/_posts/2010-4-23-3-00500.md
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　没有烧碱，造纸作坊就只能使用极少数的原料才能造纸，包括从移民的“净化”过程中回收来的各式破衣烂衫、渔民报废的麻网、麻绳、废棉和少数树的树皮。极大的限制了原料来源。没有硫酸，无法对纸浆进行漂白。所以造出来的纸，即不白，又不光，除了解决了穿越集团的手纸和包装纸用途之外，没起到什么作用。以至于文教部门只能发石板给学生，让他们在石板上用粉笔写字计算。
 
-　　“问题不大，争取最近一个月内投产。”季思退拍了胸脯。一千多力工上工地就能人力土法吊装把那些大结构架和各种塔竖立起来了。
+　　“问题不大，争取最近一个月内投产。”[季思退][y044]拍了胸脯。一千多力工上工地就能人力土法吊装把那些大结构架和各种塔竖立起来了。
 
 　　“能出三酸两碱我就放心了。”[马千瞩][y005]说，“现在多少要紧的事情，都卡在这上头了！”
 
@@ -88,3 +88,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
