--- a/_posts/2010-4-26-3-00800.md
+++ b/_posts/2010-4-26-3-00800.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　“采用平板浇注法吧。”[王洛宾][y003]无可奈何地看着多出来的许多筐碎玻璃。
 
-　　“你确定上这玩意？”季思退对玻璃制造是有所了解的，“这可以算是工业规模了。”
+　　“你确定上这玩意？”[季思退][y044]对玻璃制造是有所了解的，“这可以算是工业规模了。”
 
 　　[王洛宾][y003]慨叹道：“工业规模就工业规模吧，我们不缺技术，可是缺有技术的工人。只好用规模来弥补技术了。”
 
@@ -97,3 +97,4 @@ tag: [normal]
 　　“好，我同意。”[马千瞩][y005]在项目单上签了字。
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
