--- a/_posts/2010-8-20-3-12400.md
+++ b/_posts/2010-8-20-3-12400.md
@@ -96,17 +96,17 @@ tag: [normal]
 
 　　“我看到报纸上登了。”时袅仁对煤化企业不感兴趣，“煤化产品很多，大约是合成氨吧？不过都是工业上用的。难道还能出抗生素？”
 
-　　“磺胺！”赵艳梅说，“季思退说了，这个煤化联合厂一投产，其中的副产品就是磺胺原料。”
+　　“磺胺！”赵艳梅说，“[季思退][y044]说了，这个煤化联合厂一投产，其中的副产品就是磺胺原料。”
 
 　　时袅仁当然知道磺胺意味着什么。这种化学合成物最早被发现在染料中，是青霉素类抗生素之前最有效的抗感染类药物。在这个细菌还没产生耐药性的时空里，光这个东西就能挽救无数人的性命！
 
 　　“真得？！”时袅仁又惊又喜，差点站了起来，这可是个重大利好消息。
 
-　　“季思退说得。他是专家，总不会胡说八道吧。”
+　　“[季思退][y044]说得。他是专家，总不会胡说八道吧。”
 
 　　“嗯，嗯，这事情得跟进！跟进！”
 
-　　“不用着急，酸碱厂得后天才点火呢，煤化厂还得等些日子。据季思退说连煤都没运够呢。”
+　　“不用着急，酸碱厂得后天才点火呢，煤化厂还得等些日子。据[季思退][y044]说连煤都没运够呢。”
 
 　　“行，先不说这个。”时袅仁想起自己的正事不是为了找抗生素，他把目前一些卫生状况和赵艳梅说了一下，提出药厂最好能在最近做一些常用的药品。
 
@@ -158,3 +158,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
