--- a/_posts/2011-3-30-3-34600.md
+++ b/_posts/2011-3-30-3-34600.md
@@ -6,7 +6,7 @@ path: 2011-3-30-3-34600.md
 tag: [normal]
 ---
 
-　　原本准备对常师德的指控很严厉，单良等人认为常师德的行为属于“贪污公款”，但是这个提议在元老院常务会议上遭到了否决，包括执委会委员在内的多数人不同意这种说法，有一部分人——以季退思为代表——认为常师德的行为并不违法。因为当初执委会派遣他去雷州的时候，对如何用款并无任何限制，在这个前提下，只要他能完成任务，如何使用公款是他的自由，最多只能认为执委会授权有误。
+　　原本准备对常师德的指控很严厉，单良等人认为常师德的行为属于“贪污公款”，但是这个提议在元老院常务会议上遭到了否决，包括执委会委员在内的多数人不同意这种说法，有一部分人——以[季退思][y044]为代表——认为常师德的行为并不违法。因为当初执委会派遣他去雷州的时候，对如何用款并无任何限制，在这个前提下，只要他能完成任务，如何使用公款是他的自由，最多只能认为执委会授权有误。
 
 　　甚至有一部分人置疑单良等人的动机是不是出于“妒忌”，常师德等人在雷州出生入死，冒着生命危险占有了雷州的糖业资源，打通了对越贸易，为穿越集团获得了稳定的财源和粮源，还找到了鸿基煤矿，以他的功绩来说，花几十两银子公款买几个女人供自己享用毫不为过。如果要在这个问题上揪住不放，只会让外派人员寒心。
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　单良随后质问：“你凭什么认为示威游行队伍会干出打砸抢的事情来？这算不算一种擅自进行的‘有罪推定’？你就这么怀疑穿越众的政治觉悟？”
 
 　　独孤求婚不甘示弱：“这世界上所有的示威游行都是要批准的，都是要警察随同护送，凭什么认为穿越众的觉悟会比世界上的其他人都要高明？”
+[y044]: /characters/y044 "季思退"
