--- a/_posts/2011-5-11-4-00600.md
+++ b/_posts/2011-5-11-4-00600.md
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　排出的污水将和城市里产生的垃圾一起在沼气池内发酵，产生的沼气用来点路灯。处理过的污水用来农业灌溉，而残渣也作为肥料使用。
 
-　　季退思还打算在这里建造一座干馏炉。榆林是穿越集团的木料供应地，当地有许多打筒剩下的残料，而且未来椰子将在三亚当地加工，加工过程中会产生的大量椰子壳。这些废料可以用来焦化，产生的木焦油运回临高用作化工原料，煤气用来供应三亚的民用照明和工业用途。而椰子壳干馏之后就是很好的活性炭。
+　　[季退思][y044]还打算在这里建造一座干馏炉。榆林是穿越集团的木料供应地，当地有许多打筒剩下的残料，而且未来椰子将在三亚当地加工，加工过程中会产生的大量椰子壳。这些废料可以用来焦化，产生的木焦油运回临高用作化工原料，煤气用来供应三亚的民用照明和工业用途。而椰子壳干馏之后就是很好的活性炭。
 
 　　自来水限于穿越集团尚无一种充裕的原材料来大规模的量产管道——本时空没有PVC。如果象欧洲人一样用铅倒是方便，就是对身体有毒性。青铜很适合但是成本过高。只剩下铸铁，还是受到原材料产能的限制。所以最终田九九为三亚的设计的用水系统继续是引水渠模式：用抽水机在水源地抽水，通过暗渠输送到沉淀池再进行沉淀消毒的模式，消毒完毕的水通过铸铁总管输送到城里的公共蓄水池里。蓄水池用钢筋水泥制造，顶部有打开的盖子，便于清理。蓄水池的墙壁上安装有多个水龙头。机械厂还专门设计了一种投币收费系统，一枚筹码投下后可以让水龙头打开能放出20升的水的时间。
 
@@ -105,3 +105,4 @@ tag: [normal]
 　　这个要求很快得到了批准，三亚既然是建设重点，基建工程量当然不少，不能总是从临高运载砖瓦。自给是必须的。最终勘探队员们在田独河口附近找到了合适的粘土。于是在当地就修建了小型的砖窑。
 
 　　烧窑的燃料准备使用本地特色——各种碎木和枝杈，这些东西即不够用也不好用，实际上还是主要使用煤炭。榆林堡四周无煤供应，所用的燃料煤将从临高运来——考虑到这里要用煤的设备很多，专门开辟一条煤炭运输线也不为过。
+[y044]: /characters/y044 "季思退"
