--- a/_posts/2011-7-1-4-05700.md
+++ b/_posts/2011-7-1-4-05700.md
@@ -56,7 +56,7 @@ tag: [normal]
 
 　　林深河在下面皱眉头：一万枚。这伙人还真是张口就来啊。火箭这东西第一武器设计小组早就搞出来的，当初还拿它放过烟火。发展到现在，康格里夫火箭虽然还没用过却已经列入了他准备淘汰武器的名单，第一小组已经试射了好几发不同口径的黑尔火箭。这种火箭比康格里夫要先进得多，也不需要长长的稳定杆。
 
-　　“大明不是大清，没有琦善这样的识大体顾大局的大员。”季退思哼了一声，“我们要这么乱搞，就等着朝廷征琼饷，年年和我们开战吧。”
+　　“大明不是大清，没有琦善这样的识大体顾大局的大员。”[季退思][y044]哼了一声，“我们要这么乱搞，就等着朝廷征琼饷，年年和我们开战吧。”
 
 　　“难道我们还怕明军不成，再说明廷征琼饷不是自寻死路，加速了崩溃过程？”司凯德说。
 
@@ -152,3 +152,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
