--- a/_posts/2011-7-2-4-05800.md
+++ b/_posts/2011-7-2-4-05800.md
@@ -72,7 +72,7 @@ tag: [normal]
 
 　　考虑新军的优势火力和相对缺乏作战经验，大家觉得这个思路非常适合穿越集团。
 
-　　“我认为防守反击极不可取！因为我们前面的采取的一些手段造成了相当的程度上的思想混乱！”正当这个决议要定论的时候，季退思上了发言席上大声疾呼：“首先我们必须为自己正名！我们不能再这样顶着澳洲人的头衔混下去了——这样下去只会会对我们的军队和人民造成更大的思维混乱！”
+　　“我认为防守反击极不可取！因为我们前面的采取的一些手段造成了相当的程度上的思想混乱！”正当这个决议要定论的时候，[季退思][y044]上了发言席上大声疾呼：“首先我们必须为自己正名！我们不能再这样顶着澳洲人的头衔混下去了——这样下去只会会对我们的军队和人民造成更大的思维混乱！”
 
 　　他大声的吼叫着，还伴随着激烈的动作。
 
@@ -98,13 +98,13 @@ tag: [normal]
 
 　　梅林说：“看表现好了。动摇也有不同种级别的。跳的最凶的，肯定也死的最惨，其余按相应的等级与以惩罚即可。现在我们控制人力还不算多，法来责众也没多大问题。”
 
-　　“太浪费了！陆军里的每一个士兵，都至少受过六个月以上的军事训练。论及军事素养在本时空堪称第一。更不用说很多人还掌握了更高级的军事技能。那些动摇分子里可能就有临高辛苦培养的技术骨干和军事骨干，杀了他们就不止是可惜了。而且他们也不见得就想背叛临高，纯粹是因为明朝积威所至，也许只是内心软弱的一念之差。我们要做得就是要给他们信心，相信临高力量的强大，让他们相信临高可以保护他们，同时也让他们意识到背叛的后果，他们可能就是以后最忠实的部下。”季退思最后提议：应该立即总动员，海军陆军一起出动，带上臼炮和火箭，先推过去推掉海南府城树立信心，然后大军杀奔广东。攻下香山县城或新安县，然后与明廷讨价还价——如不从，再炮击广州。
+　　“太浪费了！陆军里的每一个士兵，都至少受过六个月以上的军事训练。论及军事素养在本时空堪称第一。更不用说很多人还掌握了更高级的军事技能。那些动摇分子里可能就有临高辛苦培养的技术骨干和军事骨干，杀了他们就不止是可惜了。而且他们也不见得就想背叛临高，纯粹是因为明朝积威所至，也许只是内心软弱的一念之差。我们要做得就是要给他们信心，相信临高力量的强大，让他们相信临高可以保护他们，同时也让他们意识到背叛的后果，他们可能就是以后最忠实的部下。”[季退思][y044]最后提议：应该立即总动员，海军陆军一起出动，带上臼炮和火箭，先推过去推掉海南府城树立信心，然后大军杀奔广东。攻下香山县城或新安县，然后与明廷讨价还价——如不从，再炮击广州。
 
 　　这时候邬德提出要求发言：“我赞同在预设阵地进行防御反击的作战模式——我们的软硬实力土著们已经看到了。而且在军队身上下了很大的本钱。政治教育、忆苦思甜、军人荣誉感、高薪、现代军事管理制度……这些一概不少的全部贯彻下去了。士兵如果一听说大明军队来了就要吓得动弹不得，未免太夸张了。”
 
 　　他停顿了下：“至于你说得现阶段穿越集团有名不正言不顺这点我完全同意。我们的确需要一个名义。李自成还知道继承闯王的头衔，土匪尚且知道要有个名头响亮的字号，我们总是用澳洲人的名义的确非常不好，首先是自己甘于海外之人，容易被人扣以‘华夷之别’的帽子；其次是跟随我们的百姓大众没有一个名分，搞不清效忠的对象。”
 
-　　“我也赞同出境御敌的战略！”有人附议季退思的提案，“必须进攻，积极主动的进攻。这是临高的立国之战，意义不亚于当年的抗美援朝，务必先胜而后战，首战不但胜，还要大胜，才能对外宣扬军威，对内震慑土著中那些还狐疑不定、怀有二心的人。所谓眼见为实，亲眼看到我们的军事工业体系能有如此大的威力，一定会增加内部的凝聚力。”
+　　“我也赞同出境御敌的战略！”有人附议[季退思][y044]的提案，“必须进攻，积极主动的进攻。这是临高的立国之战，意义不亚于当年的抗美援朝，务必先胜而后战，首战不但胜，还要大胜，才能对外宣扬军威，对内震慑土著中那些还狐疑不定、怀有二心的人。所谓眼见为实，亲眼看到我们的军事工业体系能有如此大的威力，一定会增加内部的凝聚力。”
 
 　　“我反对，这样有变相扩大战争范围……”
 
@@ -155,3 +155,4 @@ tag: [normal]
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
