--- a/_posts/2012-1-28-5-03100.md
+++ b/_posts/2012-1-28-5-03100.md
@@ -26,9 +26,9 @@ tag: [normal]
 
 　　现在，他们已经实际上拥有了海南所有盐场的控制权——沿着琼州海峡，琼州府有多个历史悠久的海边盐场。但是这些盐场和过去的马袅盐场一样，盐民逃散，生产凋敝，生产设施和手段极其落后，盐产量不高，亟需整顿和技术改造，这不是一蹴而就的事情。所以马袅盐场眼下还是他们最主要的盐来源。
 
-　　由于可以预见的海水污染问题，有一部分元老认为应该马上考虑开发占领莺歌海或者广东沿海的盐场，而将马袅的盐只作为工业用盐。但是季退思认为不需要这么紧张。
+　　由于可以预见的海水污染问题，有一部分元老认为应该马上考虑开发占领莺歌海或者广东沿海的盐场，而将马袅的盐只作为工业用盐。但是[季退思][y044]认为不需要这么紧张。
 
-　　“旧时空里渤海湾沿岸照样是海盐的主要产区，渤海沿岸的工业污染可比我们这里一个小小的钢铁公司大得多了，环渤海工业带上的重化、钢铁、机械……哪个不是高污染行业？”季退思说，“大不了以后从雷州搞点元老特供盐——他们不就是怕吃了高铁盐嘛。”
+　　“旧时空里渤海湾沿岸照样是海盐的主要产区，渤海沿岸的工业污染可比我们这里一个小小的钢铁公司大得多了，环渤海工业带上的重化、钢铁、机械……哪个不是高污染行业？”[季退思][y044]说，“大不了以后从雷州搞点元老特供盐——他们不就是怕吃了高铁盐嘛。”
 
 　　第一座高炉在紧锣密鼓中24小时连续工作下终于完成了外壳建造，开始24小时烘炉。烘炉结束冷却之后，就开始砌耐火砖的高炉内衬，等内衬砌好后再进行一次烘炉。
 
@@ -66,3 +66,4 @@ tag: [normal]
 
 　　邬德想：临高的产品最大的问题就是产能有限，而产能又和机械的供应匮乏有关，机械的匮乏症结当然是钢铁不够用。只要在钢铁问题上打开局面后面的事情就都好办。
 [y003]: /characters/y003 "王洛宾"
+[y044]: /characters/y044 "季思退"
