--- a/_posts/2012-4-12-5-10600.md
+++ b/_posts/2012-4-12-5-10600.md
@@ -46,7 +46,7 @@ tag: [normal]
 
 　　但是他还有事情没有解决：那位要与他“合大药”的缙绅阴魂不散。上次去和他相谈之后，尽管张应宸反复说他对“房中术”不甚了解，又教了他一些强身壮体的导引之法，但是对方不知为何似乎愈发认定了他“另有乾坤”，愈发对他恭谨，不时派人来“布施”，还请他再次前往“坐而论道”。他一直没想出有什么好办法来打发这个老不修。
 
-　　“可惜季退思搞不出伟哥啊！”张应宸喃喃自语道。这种药品如果在手，在江南这种富庶繁华之地，卖五十两银子都有大把的人要抢着买啊。
+　　“可惜[季退思][y044]搞不出伟哥啊！”张应宸喃喃自语道。这种药品如果在手，在江南这种富庶繁华之地，卖五十两银子都有大把的人要抢着买啊。
 
 　　杭州站在张道长挑拨离间的时候已经开始着手做一系列的准备工作。赵引弓发觉自己同时进行着十几个项目。凤凰山庄修建、山庄的农业、缫丝、清河坊的文艺书店、印刷所、起威栈的江浙布局、南京德隆分行前期准备、教育孤儿、杭州教会交涉……这些项目尽管一部分委托给了考察团的元老，现在每个元老每天都工作十六个小时。梅林连声叫苦：说自己原来以为到江南是个美差，没想到比在临高还忙。不但每天来往于凤凰山庄和清河坊之间指挥基建和装修，晚上不干活的时候还要帮忙处理各种事务和充当孤儿们的教师。
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　就像美国人建造的自由轮并不是只有一种，临高建造的和谐轮也有几种标准设计。
 
 　　在企划院的计划表上，临高造船厂的造船计划是“甲造船”，而香港造船厂就属于“乙造船”。在分配物资、人员和船只的技术水平上都有明确的差距。所以“和谐轮”几乎全部是木结构、风帆动力、不超过800吨位中小型辅助船只。
+[y044]: /characters/y044 "季思退"
