--- a/_posts/2012-5-28-5-15200.md
+++ b/_posts/2012-5-28-5-15200.md
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　在工能委服务的“元老高级工程师”们已经陆续到达了，他们分成许多个小圈子在低声的谈话，犹如蜂房一般。不时的还有人激动地说出喊出几句“草性”、“傻B”之类的话语。
 
-　　林汉隆看到季退思正在侃侃而谈：“……伟哥？赵皇上还敢说？我就等着他给我抓人来填化工厂呢！怎么也得给我二万人才行。要知道光合成流程就能写上一黑板！更别说分子式了。靠我们这悲催的村办化工水平，再干五十年都造不出来……”
+　　林汉隆看到[季退思][y044]正在侃侃而谈：“……伟哥？赵皇上还敢说？我就等着他给我抓人来填化工厂呢！怎么也得给我二万人才行。要知道光合成流程就能写上一黑板！更别说分子式了。靠我们这悲催的村办化工水平，再干五十年都造不出来……”
 
 　　旁边有人还在起哄：印度神油、西班牙苍蝇云云。还有人准备卖摇头丸和冰毒给满清的，到处都是稀奇古怪的计划。林汉隆觉得有趣。这时候有人喊道：“开会了，开会了，不要再说话了！”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　这些问题一会都得和[展无涯][y004]商量下，拿个方案来，林汉隆想着。
 [y004]: /characters/y004 "展无涯"
+[y044]: /characters/y044 "季思退"
