--- a/_posts/2012-8-30-5-24600.md
+++ b/_posts/2012-8-30-5-24600.md
@@ -70,7 +70,7 @@ tag: [normal]
 
 　　“我们起码比黄崖洞的生产条件要强多了……”徐营捷看了规划图之后勉强笑着说道。他露在外面的胳膊上已经多了一道伤疤——这是半年前在制造雷汞时候被炸碎的玻璃片给他留下的。
 
-　　“也比现在的安全条件好。不然我们化工部这哥几个迟早要变成独眼龙、一条腿。提前进翠岗也是必然的事情。”化工部的头头季退思说道。不要说火炸药这种玩意了，就是化工厂里的生产也经常让他心惊胆颤。
+　　“也比现在的安全条件好。不然我们化工部这哥几个迟早要变成独眼龙、一条腿。提前进翠岗也是必然的事情。”化工部的头头[季退思][y044]说道。不要说火炸药这种玩意了，就是化工厂里的生产也经常让他心惊胆颤。
 
 　　化工部的确有几个不怕死的炸药爱好者，但是勇气不能带来安全——大伙还想看到革命胜利的那一天——当然还得是完整无缺的。
 
@@ -79,3 +79,4 @@ tag: [normal]
 　　经过一年多的大兴土木，厂区到现在还没有建成，或者说还不知道什么时候才能建成。按照规划：各种设施之间要建造大量阻挡冲击波的人工障碍物，通常是20-30米高的土堤，以便把冲击波和燃烧物导向高空——为了避免爆炸中乱石飞溅，还不能用石头。
 
 　　基本土建完成之后，土堤工程只做了不到10%。很多土堤只好里面用石头堆外面拍厚土层的方式来凑合。工厂就硬着头皮投产了。传统的安全沟的方式继续使用。土堤还要继续施工。出于安全考虑这时候不能再用喷烟吐火的蒸汽动力工程设备了，只能靠人力：伏波军和劳改队，必要的时候动用一下现代机械。
+[y044]: /characters/y044 "季思退"
