--- a/_posts/2013-7-19-6-09700.md
+++ b/_posts/2013-7-19-6-09700.md
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　还挺有生活情趣的。钟博士心想，赶明自己也弄个蒸馏器，给小英和克雷蒂亚也做点。
 
-　　葛欣馨在穿越众的女性中是个奇特的存在，报名时自己填的特长是法语，其他技能“无”。于是被安排为一般劳动力，D日之后干点后勤和行政方面的工作。一直到后来组建马袅重工业中央实验室的时候，她才出人意料的主动报名。原本工业口的一干元老并不愿意接受这么一个看起来和化工、钢铁都不搭界的女孩，可是当葛欣馨露了一手滴定管的操作后让负责面试的季退思不由得吸了一口冷气。稳定、标准的操作，特别是滴定最后靠沾四分之一滴的技术，绝对是经过科班训练才能有的技能。而看到葛欣馨在最终计算的时候根本没有看周期表，直接将待测元素的原子量一个不错得代入公式后，他直接推荐组织处让葛欣馨担任化工实验室的主任，主持化工方面的实验工作。再之后，葛欣馨在化工厂发生生产事故时对伤员的急救措施更是让时院长怀疑起了她的身份。哪怕是医院里的几个大夫也未必有如此正确果断的操作。
+　　葛欣馨在穿越众的女性中是个奇特的存在，报名时自己填的特长是法语，其他技能“无”。于是被安排为一般劳动力，D日之后干点后勤和行政方面的工作。一直到后来组建马袅重工业中央实验室的时候，她才出人意料的主动报名。原本工业口的一干元老并不愿意接受这么一个看起来和化工、钢铁都不搭界的女孩，可是当葛欣馨露了一手滴定管的操作后让负责面试的[季退思][y044]不由得吸了一口冷气。稳定、标准的操作，特别是滴定最后靠沾四分之一滴的技术，绝对是经过科班训练才能有的技能。而看到葛欣馨在最终计算的时候根本没有看周期表，直接将待测元素的原子量一个不错得代入公式后，他直接推荐组织处让葛欣馨担任化工实验室的主任，主持化工方面的实验工作。再之后，葛欣馨在化工厂发生生产事故时对伤员的急救措施更是让时院长怀疑起了她的身份。哪怕是医院里的几个大夫也未必有如此正确果断的操作。
 
 　　作为女性，她的行为也并不是特别合群。她的相貌在女性元老中算相当好的，却从没有男性元老追求她。不是因为不想，而是往往找不到宿舍－实验室两点一线的她。她和钟博士一样，完全沉在实验室这个自己的城堡里。等到重工业中央实验室造好了宿舍楼之后，她就搬了过去，彻底的从公众视线中消失了。
 
@@ -79,3 +79,4 @@ tag: [normal]
 　　“没错，”葛欣馨点头，“我已经做一些预研，不过下一步的工作需要的东西太多了。不是我这里能够解决的，所以想正式申请立个项。”
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
