--- a/_posts/2014-2-2-6-29500.md
+++ b/_posts/2014-2-2-6-29500.md
@@ -52,7 +52,7 @@ tag: [normal]
 
 　　“要改善伙食他们可以购买天厨临高分厂出品的临高米粉，堪称价廉物美，可是日本佬显然不傻，里面掺得是红薯粉，纤维质含量太高。相比之下，济州的马铃薯粉条除去少量作为添加剂的明矾，几乎全是纯质的淀粉。根据我们此前掌握的情报，黑尔在试制硝化淀粉炸药，已经实验性地制出了少量成品。如果他能获得稳定的淀粉来源而不用自己苦哈哈地去种植薯类和玉米并亲手提炼淀粉的话，无疑使得他往量产猛炸药的道路上又迈进了一步。”
 
-　　会议室里爆发出一片惊叹、咒骂和抱怨。“我不明白，”代表的总参东门吹雨说：“三酸两碱，制造炸药和雷汞至少需要两样，黑尔能从哪儿能搞到，难道从季退思同志那里订购？”
+　　会议室里爆发出一片惊叹、咒骂和抱怨。“我不明白，”代表的总参东门吹雨说：“三酸两碱，制造炸药和雷汞至少需要两样，黑尔能从哪儿能搞到，难道从[季退思][y044]同志那里订购？”
 
 　　“澳门的葡萄牙商人中传来的消息：有人曾在果阿的铸造场里订造了不少样式奇特的铅管、铅板和铅罐，订货完成后都被送交马尼拉。推断下来，黑尔是用这些玩意装配了一具小型铅室用于制造硫酸。弄不好黑尔把我们卖去的酒瓶和玻璃碗也都改成了化工实验器材。原料可能是台北地区出产的硫磺，近来马尼拉同台湾北部的淡水、基隆驻军之间的联系相当频繁，平均每个月有一艘船驶往两地运输补给，带回货物。这数字太高了往年每年才不过一两艘。情报显示了一项值得注意的事，台湾岛上的西班牙人最近改变了他们的传统政策，不再用硫磺当作实物报酬支付给替他们筑城的华人民工，改为支付烟草和香料。这可能出于菲律宾总督的授意。所有的硫磺无疑都运到马尼拉去了。另外，他们正在向淡水的城堡增援，运去了新得火炮和连队，很显然。西班牙人会不吝运用武力来保证台湾的硫磺供应。”
 
@@ -75,3 +75,4 @@ tag: [normal]
 　　“总之，”东门吹雨总结道：“黑尔在马尼拉搞的军火工业其实严重依赖于外界的原料供应，以及从我们这儿弄来的仪器设备和上游产品，没有这些他就玩不转。”
 
 　　“黑尔再天才他也就一个人，要从无到有地建成一个自给自足，相互配套的工业体系，完全是天方夜谭。”
+[y044]: /characters/y044 "季思退"
