--- a/_posts/2009-12-23-2-06700.md
+++ b/_posts/2009-12-23-2-06700.md
@@ -18,13 +18,13 @@ tag: [normal]
 
 　　“不能什么都打万无一失的算盘。”何鸣说，“军人是打仗打出来的，不是这样养出来的。”他点着了根皱巴巴的香烟。
 
-　　“寨门的问题不大，”季退思代表化工组发言，“我们化工组已经制造出了一批炸药，可以用来炸开寨门。如果有必要，还可以提供手榴弹。”
+　　“寨门的问题不大，”[季退思][y044]代表化工组发言，“我们化工组已经制造出了一批炸药，可以用来炸开寨门。如果有必要，还可以提供手榴弹。”
 
 　　“有炸药？”大伙都有点吃惊。为了避免麻烦，在准备物资的过程中并没有购买任何炸药和火工用品，现在哪冒出来的炸药？
 
 　　“是黑火药吗？”有人想起来上次从乡勇们手里还缴获了百来斤黑火药。
 
-　　“没那么低级。”季思退得意地笑了起来，这两个月化工组因为缺少必须的原料和能源，全体人员只好以搞基建工程为主：安装那几套生产设备，眼下厂房设备安装的都差不多了，这群动手能力极强的狂人们马上开始了穿越利器——炸药的试制工作。
+　　“没那么低级。”[季思退][y044]得意地笑了起来，这两个月化工组因为缺少必须的原料和能源，全体人员只好以搞基建工程为主：安装那几套生产设备，眼下厂房设备安装的都差不多了，这群动手能力极强的狂人们马上开始了穿越利器——炸药的试制工作。
 
 　　炸药的基础是化学工业，眼下化学组空有成套设备和技术，但缺乏生产原料，特别是煤和食盐。所以至今基本的三酸二碱还没能投产。好在化工组对军事方面的需求早有考虑，采购化工原料的时候特意买了一批成品的硝酸氨化肥——这可不是给[吴南海][y009]用的。现在以这批化肥为原料，出品了一种升级版——硝铵炸药。
 
@@ -82,3 +82,4 @@ tag: [normal]
 
 　　大家又商量了动用多少人去，带多少围攻用的器材和物资，卫生支援怎么安排，文宣方面怎么写告示，老百姓如何甄别赈济，商量到差不多半夜，才一一计较停当。
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
