--- a/_posts/2010-2-23-2-12900.md
+++ b/_posts/2010-2-23-2-12900.md
@@ -32,11 +32,11 @@ tag: [normal]
 
 　　百图村的攻略行动成功给团体注入了一针兴奋剂，穿越众一手编练的新军和制造的武器经受了实战的考验，这让工业口和军事口的人都很兴奋——纸上谈兵几十年了，见了真仗还打赢了。
 
-　　[马千瞩][y005]没群众那么兴奋。他虽然没参加这次远征，但是从席亚洲的嘴里也大体知道了整个过程中暴露出来的各式各样的问题，军队的状态并没有群众想象的那么乐观。加紧部队训练是唯一的办法，他不顾机械部门的一再反对，把弹药生产的优先权提高到第一位。这让工业部门的铅储备急遽下降，季思退也提醒他，化工部门已经没有多少硝储备了，火药制造用掉了大量的硝石，硝酸制造差不多完全停顿。
+　　[马千瞩][y005]没群众那么兴奋。他虽然没参加这次远征，但是从席亚洲的嘴里也大体知道了整个过程中暴露出来的各式各样的问题，军队的状态并没有群众想象的那么乐观。加紧部队训练是唯一的办法，他不顾机械部门的一再反对，把弹药生产的优先权提高到第一位。这让工业部门的铅储备急遽下降，[季思退][y044]也提醒他，化工部门已经没有多少硝储备了，火药制造用掉了大量的硝石，硝酸制造差不多完全停顿。
 
 　　“我们要是打败了，要那么多硝酸还有什么用？”
 
-　　季思退耸了耸肩，没和他争论下去。[马千瞩][y005]何尝不知道硝酸在现代工业体系里的重要作用，但是眼下危机四伏，到处都是可能的敌人，不得不穷兵黩武。
+　　[季思退][y044]耸了耸肩，没和他争论下去。[马千瞩][y005]何尝不知道硝酸在现代工业体系里的重要作用，但是眼下危机四伏，到处都是可能的敌人，不得不穷兵黩武。
 
 　　和诸彩老和谈的信息由施十四传送出去之后一直没有回音，是和是战毫无头绪，[马千瞩][y005]都怀疑这个海盗小头目到底有没有把口信送到。穿越者眼下的对各海上集团的情况一无所知，从广州传来的消息往往含糊不清，搞得[马千瞩][y005]一头雾水。现在唯一能得到的是情报资料组从史料堆里编写的崇祯元年（1628）年的各海上集团的动向。
 
@@ -82,3 +82,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y044]: /characters/y044 "季思退"
