--- a/_posts/2010-4-24-3-00600.md
+++ b/_posts/2010-4-24-3-00600.md
@@ -6,11 +6,11 @@ path: 2010-4-24-3-00600.md
 tag: [normal]
 ---
 
-　　季思退不屑道：“这是我大清之伟业 非大明之盛世也。”
+　　[季思退][y044]不屑道：“这是我大清之伟业 非大明之盛世也。”
 
 　　“虽然不想卷入某些无味的争执，但必须说这是事实。能产生资本主义萌芽的社会，商业活动必然更加活跃，而这反映出的就是人均购买力和生活水平的较高水准。”马上有明粉支持化工部部长的观点。
 
-　　“还有一个因素是清末厘金极重，而明代几乎没有税关。所以清末商品流动其实很差——大家都倾向于本地化的自然经济生产。”季思退继续道。
+　　“还有一个因素是清末厘金极重，而明代几乎没有税关。所以清末商品流动其实很差——大家都倾向于本地化的自然经济生产。”[季思退][y044]继续道。
 
 　　杜雯侃侃而谈：“明后期商品化率提高的结果就是剥削的加重和社会的动乱，旧中国一百年也是如此。另外，清的商品化率低和地主乡绅势力受压制，人口增加和旧交通环境下城镇人口承载力不足有关。”
 
@@ -80,3 +80,4 @@ tag: [normal]
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
