--- a/_posts/2010-4-8-2-17300.md
+++ b/_posts/2010-4-8-2-17300.md
@@ -10,9 +10,9 @@ tag: [normal]
 
 　　使用简易的分馏装置，就能从其中分馏出许多不同的化工产品来。这些天因为炼钢的需要，冶金部门在博铺炼焦，积存相当多的煤焦油，这些又黑又脏的煤焦油除了被化工厂做了一些焦油燃烧弹、涂抹公路沿线的电线杆之外，就是造船的时候拿来防腐了。还剩下许多存在陶罐子里。除了煤焦油，化工厂还接收了大量木材加工厂加工木炭的时候产生的木焦油。堆得临时库房里到处都是。
 
-　　季思退因为分馏塔还没安装到位，而且分馏出来的产品需要酸碱做清洗过程，一时间处理不了，但是这么多东西堆在棚子里，不说其散发出来的气味，还得找人看守着——不管是当地人还是穿越众，都有人在打这些东西的主意。土著们的想法还好些，基本就是准备当燃料或者给船涂了防水，穿越者就各有各的奇思妙想了，有些化工半吊子搞出来的危险玩意都能让季思退惊出一身冷汗来。
+　　[季思退][y044]因为分馏塔还没安装到位，而且分馏出来的产品需要酸碱做清洗过程，一时间处理不了，但是这么多东西堆在棚子里，不说其散发出来的气味，还得找人看守着——不管是当地人还是穿越众，都有人在打这些东西的主意。土著们的想法还好些，基本就是准备当燃料或者给船涂了防水，穿越者就各有各的奇思妙想了，有些化工半吊子搞出来的危险玩意都能让[季思退][y044]惊出一身冷汗来。
 
-　　听到梅晚的求助，季思退表示极大的欢迎——有人用总比没人用好。煤焦油这玩意，最最最初级的防腐材料，用来处理竹筋是绰绰有余的。
+　　听到梅晚的求助，[季思退][y044]表示极大的欢迎——有人用总比没人用好。煤焦油这玩意，最最最初级的防腐材料，用来处理竹筋是绰绰有余的。
 
 　　梅晚首先是将开好的竹筋泡在木焦油中，这个过程不仅是为了涂焦油，而且梅晚还希望通过这种方法使得干燥的竹筋能够吸收木焦油中的杂酚油，使得材质不再吸水，并且有一种的防腐和防虫效果。
 
@@ -102,3 +102,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y156]: /characters/y156 "李潇侣"
+[y044]: /characters/y044 "季思退"
