--- a/_posts/2011-2-12-3-30000.md
+++ b/_posts/2011-2-12-3-30000.md
@@ -32,7 +32,7 @@ tag: [normal]
 
 　　“干吗不直接在甲子矿炼焦，博铺那边的开滦式焦炉我看过，结构简单的很，没啥技术含量。”
 
-　　“季退思还不杀了你。”[王洛宾][y003]说，“他辛辛苦苦从21世纪搞来的煤焦化联合生产设备不就废了？这玩意的威力就是炼焦综合利用。直接处理炼焦时候产生的焦油和废气，制造各种副产品。你把炼焦炉搞到甲子矿去了他还搞什么。”
+　　“[季退思][y044]还不杀了你。”[王洛宾][y003]说，“他辛辛苦苦从21世纪搞来的煤焦化联合生产设备不就废了？这玩意的威力就是炼焦综合利用。直接处理炼焦时候产生的焦油和废气，制造各种副产品。你把炼焦炉搞到甲子矿去了他还搞什么。”
 
 　　过去用开滦炉主要是处于炼焦煤供应不稳定，而联合设备一旦点火开工不能时开时停，就一直没投入正式运转。现在有了稳定的供应渠道，高污染、浪费严重的开滦炉就成了计委列入淘汰名录的第一批落后工艺了。
 
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　很快在南渡江畔竖立起了一座长着铁胳膊不断喷吐着白汽的钢铁怪物，河边的抽水站用蒸汽机的动力抽取着河水向整个洗煤厂供应着大量的水。它身后建起了一座三层高楼，上面装着长长的木槽——这就是洗煤厂。原煤用蒸汽机驱动的绞盘提升到三楼的煤仓中去，再从三楼通过经过筛选、水洗、跳汰一道道工序……最后在底部排出的就是精煤了。煤矸石和劣质煤在中途就在溜槽里排出来了。洗煤的黑水排入废水池沉淀之后再排入南渡河——沉淀池里可以回收到大量的末煤。这种末煤含水量很大，晾干要花很长的时间。[王洛宾][y003]就用它的高含水量的特点在这里搞了个煤球车间，用蒸汽机带动煤球机制造蜂窝煤。
 
-　　从甲子煤矿定期运来的暗色褐煤虽然限于运力到货还偏少，但是终于解决了广东买煤供应的不稳定性。化工部的季退思终于可以放心的启用其建好之后一直没有正式运转的煤焦化成套设备，开足马力进行连续生产了。
+　　从甲子煤矿定期运来的暗色褐煤虽然限于运力到货还偏少，但是终于解决了广东买煤供应的不稳定性。化工部的[季退思][y044]终于可以放心的启用其建好之后一直没有正式运转的煤焦化成套设备，开足马力进行连续生产了。
 
 　　煤焦化成套设备的正式投产，给化学工业带来的发展是跨越式的。最简单的一个变化就是土法硫酸车间停工了，污染严重，硫酸质量忽上忽下的土法硫酸被工业化制造的硫酸取代了。而其他副产品汽油、柴油、沥青、苯酚、甲苯、粗苯、各种溶剂油、润滑油和石蜡也逐一开始产出。特别是润滑油和石蜡，对机械工业来说简直就是福音——椰子油下脚料这东西的润滑性能毕竟是有限的。而石蜡除了工业用之外，还给了轻工业部一个制造全新的民用产品的机会——现代蜡烛。以石蜡为主要原料制造的蜡烛，不仅在成本上低于传统的油脂蜡烛，而且在亮度上也不是旧式蜡烛可以相比的，经过处理的棉纱蜡烛芯还能随蜡烛燃烧逐渐烧掉，不会结出蜡烛花影响燃烧发出黑烟和臭味。至于汽油和柴油，虽然产量极其有限，但是也给燃料储备逐渐枯竭的内燃机带来了点希望——至少一部分车辆不会沦为顶着煤气包的古怪模样了。
 
@@ -79,3 +79,4 @@ tag: [normal]
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
