--- a/_posts/2013-5-31-6-04800.md
+++ b/_posts/2013-5-31-6-04800.md
@@ -86,13 +86,14 @@ tag: [normal]
 
 　　厂区里面人头攒动，彩旗飘扬，万事俱备，只等他们了。
 
-　　[马千瞩][y005]为首的一干元老已经伫立在主席台开工仪式台前，季退思却在主席台下正抽烟，笑吟吟的看着日益宽广的[吴南海][y009]走过来，对他口中不迭的抱歉迟到，摆了摆手不以为意。
+　　[马千瞩][y005]为首的一干元老已经伫立在主席台开工仪式台前，[季退思][y044]却在主席台下正抽烟，笑吟吟的看着日益宽广的[吴南海][y009]走过来，对他口中不迭的抱歉迟到，摆了摆手不以为意。
 
-　　“老吴，你气色不错呀。”季退思拍了拍[吴南海][y009]的肩膀。
+　　“老吴，你气色不错呀。”[季退思][y044]拍了拍[吴南海][y009]的肩膀。
 
-　　“还好，还好。”[吴南海][y009]知道这次化肥厂的事情，季退思是帮了大忙的，当然，化肥厂和硫酸配套工程说白了还是化工口的项目，帮他也是帮自己。但是这份人情还是沉甸甸的。他连连拱手，半开玩笑的说道：“大恩不言谢。”
+　　“还好，还好。”[吴南海][y009]知道这次化肥厂的事情，[季退思][y044]是帮了大忙的，当然，化肥厂和硫酸配套工程说白了还是化工口的项目，帮他也是帮自己。但是这份人情还是沉甸甸的。他连连拱手，半开玩笑的说道：“大恩不言谢。”
 
-　　“哪里，哪里”，季退思因为最近化工口项目不断，颇有些意气风发的感觉，“我们是互相帮助，今后我们还要更好的合作啊。”
+　　“哪里，哪里”，[季退思][y044]因为最近化工口项目不断，颇有些意气风发的感觉，“我们是互相帮助，今后我们还要更好的合作啊。”
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
 [y011]: /characters/y011 "罗铎"
+[y044]: /characters/y044 "季思退"
