--- a/_posts/2013-6-1-6-04900.md
+++ b/_posts/2013-6-1-6-04900.md
@@ -12,7 +12,7 @@ tag: [normal]
 
 　　最近元老院办公厅发出了“厉行勤俭节约反对铺张浪费”的通知，要求各部门各元老，尽量减少不必要的庆祝仪式，减少公务应酬礼仪开支，所以场面小了很多。不过，开工仪式之后照例的参观是少不了的。
 
-　　参观学习是最有效的洗脑手段，因而元老院不放过任何一次此类大好机会。这批天地会的客户已经少量试用过化肥，对这种“肥田粉”的神奇效果早就有所体验，听说这家厂子是专门生产“肥田粉”的，都想瞧瞧这肥田粉到底是怎么做出来的，一个个兴致勃勃的是跟着季退思一起参观现代化的化肥生产。
+　　参观学习是最有效的洗脑手段，因而元老院不放过任何一次此类大好机会。这批天地会的客户已经少量试用过化肥，对这种“肥田粉”的神奇效果早就有所体验，听说这家厂子是专门生产“肥田粉”的，都想瞧瞧这肥田粉到底是怎么做出来的，一个个兴致勃勃的是跟着[季退思][y044]一起参观现代化的化肥生产。
 
 　　临高第一化肥厂名头很大，圈占的土地也不小，但是目前只建成了1万吨普通过磷酸钙和4千吨硫酸配套项目。厂区内还有大片的空闲土地，这是为今后上新项目时预留的土地。
 
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　一干人一个个皆心神震撼，想到首长们将巨力和坚铁于股掌之间，夺造化之机，心中不但又敬又畏，更对临高美好的未来有了更大的憧憬。更对自己和家族的未来满怀信心。
 
-　　但是对季思退来说，目前的局面一点都不美好。产业升级有太多需要化工产品的地方，从装备制造业。军工、农业、医学……几乎无一不对化学工业提出各式各样的要求，但是这些要求到目前化工口能满足的不多，即使能够生产的，多半也有产能不够的问题。
+　　但是对[季思退][y044]来说，目前的局面一点都不美好。产业升级有太多需要化工产品的地方，从装备制造业。军工、农业、医学……几乎无一不对化学工业提出各式各样的要求，但是这些要求到目前化工口能满足的不多，即使能够生产的，多半也有产能不够的问题。
 
 　　这一方面首先是受到材料的限制，化工生产设备需要许多耐腐蚀材料和特殊钢目前他们的冶金工业基本不能满足，不得不广泛使用陶瓷和玻璃作为许多化工设备的制造材料。这两种材料的耐腐蚀性虽然不错，来源也很广泛但是材料的机械性能和加工性有限。只能用来制造一些小型的设备和部件作为代用品。这也使得临高的新建的化工企业大多数近乎于扩大若干倍的的试验室生产。
 
@@ -38,13 +38,13 @@ tag: [normal]
 
 　　尽管采取了严格封锁事故消息的措施和提供优厚的待遇，很多稍知内情的归化民还是不大愿意到化工厂工作，只能分配没有人身自由的契约奴到化工企业工作。要不是发动机行动运来了大量的契约奴，他的扩大用工规模的计划还真难以立刻实现。
 
-　　季思退受困于巨大的需求、低劣的设备，毫无训练的工人，频繁的事故，外加时断时续的原料供应，折腾的他都有了白头发。
+　　[季思退][y044]受困于巨大的需求、低劣的设备，毫无训练的工人，频繁的事故，外加时断时续的原料供应，折腾的他都有了白头发。
 
-　　参观完生产线，让天地会的客户们各自离去，[吴南海][y009]和季退思一起坐“城铁”回百仞城去。
+　　参观完生产线，让天地会的客户们各自离去，[吴南海][y009]和[季退思][y044]一起坐“城铁”回百仞城去。
 
-　　[吴南海][y009]看季思退的表情比较放松，拿出一支“初晴限定版”递了过去，乘机说道：“老季，听说碳酸氢铵的生产比较简单，只要有无烟煤就好搞了，而且比硫酸铵更适合这里的酸性土壤。你看下一步能不能专门上个线？我们现在氮肥的缺口也很大啊……”
+　　[吴南海][y009]看[季思退][y044]的表情比较放松，拿出一支“初晴限定版”递了过去，乘机说道：“老季，听说碳酸氢铵的生产比较简单，只要有无烟煤就好搞了，而且比硫酸铵更适合这里的酸性土壤。你看下一步能不能专门上个线？我们现在氮肥的缺口也很大啊……”
 
-　　“老吴啊，你以为这事我们没想过？当年搞小化肥很多都是搞碳酸氢铵项目，我们现在无烟煤供应也没问题。但是问题绕了一圈又回来了，”季退思点上雪茄，侃侃而谈：“我们800吨合成氨用得就是小氮肥厂常见的侯德榜的联碳法。不然你以为现在提供给你们的碳酸氢铵是哪里来的？”
+　　“老吴啊，你以为这事我们没想过？当年搞小化肥很多都是搞碳酸氢铵项目，我们现在无烟煤供应也没问题。但是问题绕了一圈又回来了，”[季退思][y044]点上雪茄，侃侃而谈：“我们800吨合成氨用得就是小氮肥厂常见的侯德榜的联碳法。不然你以为现在提供给你们的碳酸氢铵是哪里来的？”
 
 　　目前化工厂的800吨合成氨生产项目就是运用1958年侯德榜发明的联碳法。合成流程是以无烟煤为原料，先制取半水煤气，后者经脱除硫化氢后，进入加压变换反应系统，得到的氮、氢和二氧化碳的混合气。混合气进入碳化塔，在此二氧化碳与浓度为17%左右的氨水反应，生成碳酸氢铵结晶，经离心机分离即得碳酸氢铵产品。
 
@@ -56,21 +56,21 @@ tag: [normal]
 
 　　[吴南海][y009]大失所望：“这么说还是合成氨生产规模的问题。”
 
-　　“没错。”季退思说，“没有合成氨，要么找到渠道从大陆上能够稳定的进口硝石，这个可能性不大，就算大明不闻不问，道路畅通，以本时空的生产能力也不大可能满足我们的需求；要么现在就建立横跨太平洋的智利硝石海运路线……”
+　　“没错。”[季退思][y044]说，“没有合成氨，要么找到渠道从大陆上能够稳定的进口硝石，这个可能性不大，就算大明不闻不问，道路畅通，以本时空的生产能力也不大可能满足我们的需求；要么现在就建立横跨太平洋的智利硝石海运路线……”
 
 　　“那更不可能了。”[吴南海][y009]摇头，“我们还得自己建立采矿点。”
 
-　　“没错，所以只剩下最后一个办法，尽快点亮自产合成氨装备的科技树，扩大产能。”季退思意味深长的说道，“装备制造业还是一切的基础。”
+　　“没错，所以只剩下最后一个办法，尽快点亮自产合成氨装备的科技树，扩大产能。”[季退思][y044]意味深长的说道，“装备制造业还是一切的基础。”
 
 　　“你说得很对。”[吴南海][y009]说，“我想大家都明白这个道理。会上应该多提一提。”
 
-　　季退思笑了笑：“先不说设备问题了。就说这厂子里的4000吨硫酸配套项目吧，计划用硫铁矿，一年要5000吨，可是我们现在能开采的万宁县的山根硫铁矿，历史上最多也就有一千多吨一年。全给现在硫酸厂用都不够。就算明年山根硫铁矿立刻达到历史最大生产能力，这五千吨新增缺口我还不知道上哪里找去……”
+　　[季退思][y044]笑了笑：“先不说设备问题了。就说这厂子里的4000吨硫酸配套项目吧，计划用硫铁矿，一年要5000吨，可是我们现在能开采的万宁县的山根硫铁矿，历史上最多也就有一千多吨一年。全给现在硫酸厂用都不够。就算明年山根硫铁矿立刻达到历史最大生产能力，这五千吨新增缺口我还不知道上哪里找去……”
 
 　　[吴南海][y009]听了冷汗直冒，要是硫酸配套不够用，他这每年一万吨的普通过磷酸钙岂不是要泡汤！赶紧问道：
 
 　　“海南就没有其他的硫铁矿吗？”
 
-　　“有倒是有，就是开采运输不便，没山根那么条件优越：海边上挖出来直接用轨道车拉到海边装船就行了。”季退思抽着雪茄，“企划院的意见是先扩大山根硫铁矿的开采，再从台湾运入天然硫磺……”
+　　“有倒是有，就是开采运输不便，没山根那么条件优越：海边上挖出来直接用轨道车拉到海边装船就行了。”[季退思][y044]抽着雪茄，“企划院的意见是先扩大山根硫铁矿的开采，再从台湾运入天然硫磺……”
 
 　　台湾和琉球群岛、日本列岛一样，因为地质活动较为活跃，有大量的天然硫磺矿。在清代已经是重要的输出商品。
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　两个人一路侃侃而谈。很快就各自到站了。[吴南海][y009]回到农委会的办公室已经是下午三点了，他坐了下来，从上锁的抽屉里取出一本黑皮的秘密备忘录，这是他专门用来记载一些比较敏感重要事务的，在上面写了一段文字。
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y044]: /characters/y044 "季思退"
